@@ -26,3 +26,5 @@ S7.xls
 S8.xls
 S9.xls
 t/example-phone-numbers.t
+COCodeStatus_ALL.csv
+COCodeStatus_ALL.zip
