@@ -7,12 +7,15 @@
 use strict;
 use warnings;
 use XML::XPath;
+use Text::CSV_XS;
 use Data::Dumper;local $Data::Dumper::Indent = 1;
 
 use lib 'lib';
 use Number::Phone::Country qw(noexport);
 
 $| = 1;
+
+my $csv = Text::CSV_XS->new({ binary => 1 });
 
 open(MODULE, '>lib/Number/Phone/NANP/Data.pm') || die("Can't write lib/Number/Phone/NANP/Data.pm\n");
 
@@ -37,7 +40,7 @@ print MODULE q{
 
   use strict;
   use warnings;
-  use vars qw(%areanames %fixed_line_regexes %mobile_regexes);
+  use vars qw(%areanames %fixed_line_regexes %mobile_regexes %operators);
 }.
 "our \$VERSION = 1.".join("", (gmtime())[5] + 1900, sprintf('%02d', (gmtime())[4] + 1), map { sprintf('%02d', $_) } (gmtime())[3, 2, 1, 0]).";\n\n".q{
 
@@ -99,5 +102,21 @@ TERRITORY: foreach my $territory (@territories) {
     print MODULE "\$fixed_line_regexes{$ISO_country_code} = '$fixed';\n";
     print MODULE "\$mobile_regexes{$ISO_country_code} = '$mobile';\n";
 }
+
+print MODULE '%operators = (';
+open(my $operators, '<', 'COCodeStatus_ALL.csv') ||
+    die("Couldn't open COCodeStatus_ALL.csv: $!\n");
+$csv->getline($operators); # header line
+$csv->getline($operators); # date stamp?
+while(my $row = $csv->getline($operators)) {
+    last unless($row->[0]);
+    next unless($row->[2]);
+    print MODULE join('',
+        $row->[0], $row->[1], ' => ',
+        '"'.quotemeta($row->[2]).'",',
+        "\n"
+    );
+}
+print MODULE ');';
 
 close(MODULE);
